--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --max-warnings=0",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit --pretty"
   },
   "dependencies": {
     "class-variance-authority": "0.7.0",
@@ -24,6 +26,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
+    "eslint-plugin-only-warn": "1.1.0",
+    "eslint-plugin-tailwindcss": "3.17.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
